--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
     <title>Fast is Fun</title>
 </head>
 <body>
-    
+    <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo" height="100px"></a>
+        <a class="navbar-brand" href="index.html"><img src="images/logo2.png" alt="logo" height="50px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,6 +38,19 @@
           </ul>
         </div>
       </nav>
+
+      <!--Jumbotron-->
+      <div class="jumbotron">
+        <h1 class="display-3">Fast is Fun</h1>
+        <p class="lead">Your personalized running coach passionate about helping your reach your full potential!</p>
+        <hr class="my-4">
+        <p>Want to know how I can help you reach your running goals?</p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </p>
+      </div>
+
+      <!--Footer-->
 
       <!--Bootstrap 4.3 dependencies-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
