--- a/index.html
+++ b/index.html
@@ -53,14 +53,31 @@
       <!--About Me-->
       <div class="card mx-auto text-white bg-primary" style="max-width: 75rem;">
         <div class="row no-gutters">
-          <div class="col-md-4">
+          <div class="col-md-7">
             <img src="images/bib.jpg" class="card-img" alt="Me holding up a race bib">
           </div>
-          <div class="col-md-8">
+          <div class="col-md-5">
             <div class="card-body">
               <h5 class="card-title">About me</h5>
               <p class="card-text">Hi, I'm Chelsea! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
+          </div>
+        </div>
+      </div>
+
+    <!--Why A Coach?-->
+      <div class="card mx-auto text-white bg-info" style="max-width: 75rem;">
+        <div class="row no-gutters">
+          <div class="col-md-5">
+            <div class="card-body">
+              <h5 class="card-title">Why use a running coach?</h5>
+              <p class="card-text">Because I'm awesome! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+          </div>
+          <div class="col-md-7">
+            <img src="images/matthew.jpg" class="card-img" alt="Me and my husband holding our medals">
           </div>
         </div>
       </div>
