Add Pricing section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,62 @@
         </div>
       </div>
 
+      <!--Pricing-->
+      <div>
+        <img class="pricing-logo" src="images/logo.png">
+    </div>
+    
+      <div>
+        <h1 class="text-center text-info">Pricing</h1>
+      </div>
+
+        <div class="container text-info">
+        <div class="card-deck mb-3 text-center">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Consultation Call</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">$0</h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>15 minutes</li>
+                <li>Identify your goals</li>
+                <li>Discover what we can achieve together</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-primary">Book Now</button>
+            </div>
+          </div>
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Customized Training Plan</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">$120</h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>12-week plan</li>
+                <li>Weekly challenges to get you to your goals</li>
+                <li>Endurance, strength and speed</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-primary">Book Now</button>
+            </div>
+          </div>
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">One-on-One Coaching</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">$60/session</h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>Tailored coaching and feedback</li>
+                <li>The fastest way to reach your goals</li>
+                <li>Let's get motivated!</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-primary">Book Now</button>
+            </div>
+          </div>
+        </div>
+    </div>
+
       <!--Footer-->
 
       <!--Bootstrap 4.3 dependencies-->
