Add anchor links, change max-width of logo

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Me</a>
+              <a class="nav-link" href="#about-me">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Why a coach?</a>
+              <a class="nav-link" href="#why-coach">Why a coach?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
@@ -46,12 +46,12 @@
         <hr class="my-4">
         <p>Want to know how I can help you reach your running goals?</p>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+          <a class="btn btn-primary btn-lg" href="#why-coach" role="button">Learn more</a>
         </p>
       </div>
 
       <!--About Me-->
-      <div class="card mx-auto text-white bg-primary" style="max-width: 75rem;">
+      <div id="about-me" class="card mx-auto text-white bg-primary" style="max-width: 75rem;">
         <div class="row no-gutters">
           <div class="col-md-7">
             <img src="images/bib.jpg" class="card-img" alt="Me holding up a race bib">
@@ -67,7 +67,7 @@
       </div>
 
     <!--Why A Coach?-->
-      <div class="card mx-auto text-white bg-info" style="max-width: 75rem;">
+      <div id="why-coach" class="card mx-auto text-white bg-info" style="max-width: 75rem;">
         <div class="row no-gutters">
           <div class="col-md-5">
             <div class="card-body">
@@ -83,15 +83,14 @@
       </div>
 
       <!--Pricing-->
+      <div id="pricing">
       <div>
         <img class="pricing-logo" src="images/logo.png">
-    </div>
-    
+      </div>
       <div>
         <h1 class="text-center text-info">Pricing</h1>
       </div>
-
-        <div class="container text-info">
+      <div class="container text-info">
         <div class="card-deck mb-3 text-center">
           <div class="card mb-4 shadow-sm">
             <div class="card-header">
@@ -137,6 +136,7 @@
           </div>
         </div>
     </div>
+</div>
 
       <!--Footer-->
 
