Change max-width of logo

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <!--Pricing-->
       <div id="pricing">
       <div>
-        <img class="pricing-logo" src="images/logo.png">
+        <img class="pricing-logo" src="images/logo.png" alt="Fast is Fun logo">
       </div>
       <div>
         <h1 class="text-center text-info">Pricing</h1>
@@ -103,7 +103,7 @@
                 <li>Identify your goals</li>
                 <li>Discover what we can achieve together</li>
               </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Book Now</button>
+              <button type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
             </div>
           </div>
           <div class="card mb-4 shadow-sm">
@@ -117,7 +117,7 @@
                 <li>Weekly challenges to get you to your goals</li>
                 <li>Endurance, strength and speed</li>
               </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Book Now</button>
+              <button type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
             </div>
           </div>
           <div class="card mb-4 shadow-sm">
@@ -131,14 +131,22 @@
                 <li>The fastest way to reach your goals</li>
                 <li>Let's get motivated!</li>
               </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Book Now</button>
+              <button type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
             </div>
           </div>
         </div>
     </div>
 </div>
 
-      <!--Footer-->
+<!-- Footer -->
+<footer class="page-footer font-small bg-primary">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Fast is Fun
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
 
       <!--Bootstrap 4.3 dependencies-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
