--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <!--Pricing-->
       <div id="pricing">
       <div>
-        <img class="pricing-logo" src="images/logo.png" alt="Fast is Fun logo">
+        <img src="images/logo.png" alt="Fast is Fun logo" class="card img-fluid mx-auto d-block">
       </div>
       <div>
         <h1 class="text-center text-info">Pricing</h1>
