--- a/index.html
+++ b/index.html
@@ -140,13 +140,9 @@
 
 <!-- Footer -->
 <footer class="page-footer font-small bg-primary">
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Fast is Fun
+    <div class="footer-copyright text-center text-info py-3"><a href="mailto:cmweis516@gmail.com" target="_blank" type="button" class="btn btn-info d-inline-block text-center">Let's Connect</a><br>© 2020 Fast is Fun<br>Web design & development by <a class="text-info" href="https://github.com/jordanacaley" target="blank">jordanacaley</a>
     </div>
-    <!-- Copyright -->
-  
-  </footer>
+    </footer>
 
       <!--Bootstrap 4.3 dependencies-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
