Add bridge photo

--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
     </div>
 </div>
 
+<!--Extra photos-->
+<div>
+    <img src="images/bridge.jpg" alt="Chelsea running over bridge" class="card img-fluid mx-auto d-block" style="max-height: 450px;">
+ </div>
+
 <!-- Footer -->
 <footer class="page-footer font-small bg-primary">
     <div class="footer-copyright text-center text-info py-3"><a href="mailto:cmweis516@gmail.com" target="_blank" type="button" class="btn btn-info d-inline-block text-center">Let's Connect</a><br>© 2020 Fast is Fun<br>Web design & development by <a class="text-info" href="https://github.com/jordanacaley" target="blank">jordanacaley</a>
