--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#contact">Contact</a>
               </li>
           </ul>
         </div>
@@ -103,7 +103,7 @@
                 <li>Identify your goals</li>
                 <li>Discover what we can achieve together</li>
               </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
+              <a type="button" class="btn btn-lg btn-block btn-primary" href="#contact">Learn More</a>
             </div>
           </div>
           <div class="card mb-4 shadow-sm">
@@ -117,7 +117,7 @@
                 <li>Weekly challenges to get you to your goals</li>
                 <li>Endurance, strength and speed</li>
               </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
+              <a type="button" class="btn btn-lg btn-block btn-primary" href="#contact">Learn More</a>
             </div>
           </div>
           <div class="card mb-4 shadow-sm">
@@ -131,7 +131,7 @@
                 <li>The fastest way to reach your goals</li>
                 <li>Let's get motivated!</li>
               </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
+              <a type="button" class="btn btn-lg btn-block btn-primary" href="#contact">Learn More</a>
             </div>
           </div>
         </div>
@@ -139,7 +139,16 @@
 </div>
 
 <!--Contact Form-->
-<div class="typeform-widget" data-url="https://form.typeform.com/to/Iy2rr1SR?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+<div id="contact">
+  <h1 class="text-center text-info">Contact Me</h1>
+</div>
+<div class="card text-white bg-primary mb-5 mx-auto d-block" style="max-width: 70rem;">
+  <div class="card-body">
+    <div class="typeform-widget" data-url="https://form.typeform.com/to/Iy2rr1SR?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 500px;"></div> 
+  </div>
+</div>
+
+<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
 <!--Extra photos-->
 <div>
@@ -147,10 +156,10 @@
  </div>
 
 <!-- Footer -->
-<footer class="page-footer font-small bg-primary">
-    <div class="footer-copyright text-center text-info py-3"><a href="mailto:cmweis516@gmail.com" target="_blank" type="button" class="btn btn-info d-inline-block text-center">Let's Connect</a><br>© 2020 Fast is Fun<br>Web design & development by <a class="text-info" href="https://github.com/jordanacaley" target="blank">jordanacaley</a>
+<footer class="page-footer bg-primary">
+    <div class="footer-copyright text-center text-info py-3">© 2020 Fast is Fun<br>Web design & development by <a class="text-info" href="https://github.com/jordanacaley" target="blank">jordanacaley</a>
     </div>
-    </footer>
+</footer>
 
       <!--Bootstrap 4.3 dependencies-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
