--- a/index.html
+++ b/index.html
@@ -155,6 +155,31 @@
     <img src="images/bridge.jpg" alt="Chelsea running over bridge" class="card img-fluid mx-auto d-block" style="max-height: 450px;">
  </div>
 
+ <!--Back to Top button-->
+ <button type="button" class="btn btn-outline-info" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
+ <script>
+  //Get the button
+  var mybutton = document.getElementById("myBtn");
+  
+  // When the user scrolls down 20px from the top of the document, show the button
+  window.onscroll = function() {scrollFunction()};
+  
+  function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+      mybutton.style.display = "block";
+    } else {
+      mybutton.style.display = "none";
+    }
+  }
+  
+  // When the user clicks on the button, scroll to the top of the document
+  function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+  }
+  </script>
+
 <!-- Footer -->
 <footer class="page-footer bg-primary">
     <div class="footer-copyright text-center text-info py-3">© 2020 Fast is Fun<br>Web design & development by <a class="text-info" href="https://github.com/jordanacaley" target="blank">jordanacaley</a>
