--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
  </div>
 
  <!--Back to Top button-->
- <button type="button" class="btn btn-outline-info" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+ <button type="button" class="btn btn-secondary" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
  <script>
   //Get the button
