Update text with Chelsea's draft content

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!--Jumbotron-->
       <div class="jumbotron">
         <h1 class="display-3">Fast is Fun</h1>
-        <p class="lead">Your personalized running coach passionate about helping your reach your full potential!</p>
+        <p class="lead">Your personalized run coach passionate about helping your reach your full potential!</p>
         <hr class="my-4">
         <p>Want to know how I can help you reach your running goals?</p>
         <p class="lead">
@@ -59,21 +59,23 @@
           <div class="col-md-5">
             <div class="card-body">
               <h5 class="card-title">About me</h5>
-              <p class="card-text">Hi, I'm Chelsea! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="card-text">Hi!  I’m Chelsea, a life-long runner and fitness enthusiast!  I’m a middle of the pack runner who dabbles in triathlon, and loves to eat, travel, and race (or even better - to combine all three!).</p>
+              <p class="card-text">I started running when I joined my high school cross country team, and still vividly remember the first time I ran 3 miles without stopping.  From there I continued to grow my love of running by joining the track and field teams, and then went on to run track and field in college.  After my glory days I became a recreational runner, where I currently sit as a strong middle-of-the-pack athlete.  I’ve completed about a dozen half marathons, 5 full marathons, and 1 ultra-marathon, with countless 5ks, 10ks, and fun runs in between.  I love the rush that crossing the finish line gives - from the journey it took to get there, the anxiety of the starting line, to the exhilarating thrill of accomplishing your goals.  Running helps keep me sane, makes me feel good, and helps me be me - I would be lost without it!</p>
+              <p class="card-text">I am a Road Runners Club of America (RRCA) certified run coach, have a Bachelor of Science degree in Kinesiology, and have coached various youth track and field teams as well as individual recreational runners.  I am passionate about helping runners of all paces in all races find their love for running!</p>
             </div>
           </div>
         </div>
       </div>
 
-    <!--Why A Coach?-->
+    <!--Why Use A Run Coach?-->
       <div id="why-coach" class="card mx-auto text-white bg-info" style="max-width: 75rem;">
         <div class="row no-gutters">
           <div class="col-md-5">
             <div class="card-body">
-              <h5 class="card-title">Why use a running coach?</h5>
-              <p class="card-text">Because I'm awesome! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <h5 class="card-title">Why use a run coach?</h5>
+              <p class="card-text">Run coaches are for all runners - any pace, and for any race.  You don’t have to be an elite runner or a front of the pack runner in order to have a coach - all you need to do is be a runner!  From wanting to finish a 5k without walking to completing your very first marathon, a run coach can help you get there.</p>
+              <p class="card-text">Looking for someone to keep you accountable?  Frustrated that you can’t seem to make progress on your own?  Worried about injury?  Need someone to tell you to chill out and actually take that rest day?  Looking for that elusive PR or qualifying time?  Do you simply want to run stronger, better, and faster?  I’m here to be your run coach to help you on your running journey!  With custom training plans written specifically for you with your needs, goals, strengths and weaknesses addressed, you can take the stress out of training and simply focus on the fun part - actually running.  </p>
+              <p class="card-text">The heart of my coaching philosophy is to keep running fun while helping you reach your goals.  I am supportive and encouraging, though will also keep you disciplined and accountable.  I’m fun, flexible, and knowledgeable, and aim to inspire and encourage you to shoot for and reach goals you didn’t think were possible!</p>
             </div>
           </div>
           <div class="col-md-7">
@@ -97,8 +99,8 @@
               <h4 class="my-0 font-weight-normal">Consultation Call</h4>
             </div>
             <div class="card-body">
-              <h1 class="card-title pricing-card-title">$0</h1>
-              <ul class="list-unstyled mt-3 mb-4">
+              <h1 class="card-title pricing-card-title">Free!</h1>
+              <ul class="list-unstyled mt-3 mb-4">Not sure if coaching is right for you?
                 <li>15 minutes</li>
                 <li>Identify your goals</li>
                 <li>Discover what we can achieve together</li>
@@ -108,28 +110,17 @@
           </div>
           <div class="card mb-4 shadow-sm">
             <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Customized Training Plan</h4>
+              <h4 class="my-0 font-weight-normal">Fast is Fun Monthly Coaching</h4>
             </div>
             <div class="card-body">
-              <h1 class="card-title pricing-card-title">$120</h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>12-week plan</li>
-                <li>Weekly challenges to get you to your goals</li>
-                <li>Endurance, strength and speed</li>
-              </ul>
-              <a type="button" class="btn btn-lg btn-block btn-primary" href="#contact">Learn More</a>
-            </div>
-          </div>
-          <div class="card mb-4 shadow-sm">
-            <div class="card-header">
-              <h4 class="my-0 font-weight-normal">One-on-One Coaching</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$60/session</h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>Tailored coaching and feedback</li>
-                <li>The fastest way to reach your goals</li>
-                <li>Let's get motivated!</li>
+              <h1 class="card-title pricing-card-title">$150/month</h1>
+              <ul class="list-unstyled mt-3 mb-4">Try coaching for a month, for a specific race training cycle, or for all your running needs.  Monthly contracts available with discounts on 3-month and 6-month packages.
+                <li>Initial consultation to assess your needs and identify you goals</li>
+                <li>Customized adjustable weekly training plans including workouts, target paces and distances, and cross training</li>
+                <li>Training plans sent online via Google Docs for flexibility and communication between athlete and coach</li>
+                <li>Weekly training log review via Google Docs commenting</li>
+                <li>Unlimited access to coach via text/email</li>
+                <li>Bi-monthly 30 minute coach/athlete check-ins via phone or Zoom</li>                  
               </ul>
               <a type="button" class="btn btn-lg btn-block btn-primary" href="#contact">Learn More</a>
             </div>
