--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about-me">About Me</a>
+              <a class="nav-link" href="about.html">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#why-coach">Why a coach?</a>
+              <a class="nav-link" href="why-coach.html">Why a coach?</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#pricing">Pricing</a>
@@ -44,24 +44,23 @@
         <h1 class="display-3">Fast is Fun</h1>
         <p class="lead">Your personalized run coach passionate about helping your reach your full potential!</p>
         <hr class="my-4">
-        <p>Want to know how I can help you reach your running goals?</p>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#why-coach" role="button">Learn more</a>
+          <a class="btn btn-primary btn-lg" href="#pricing" role="button">Services</a>
+          <a class="btn btn-info btn-lg" href="#contact" role="button">Contact</a>
         </p>
       </div>
 
       <!--About Me-->
-      <div id="about-me" class="card mx-auto text-white bg-primary" style="max-width: 75rem;">
+      <div id="about-me" class="card mx-auto text-white bg-primary" style="max-width: 75rem">
         <div class="row no-gutters">
           <div class="col-md-7">
             <img src="images/bib.jpg" class="card-img" alt="Me holding up a race bib">
           </div>
-          <div class="col-md-5">
+          <div class="col-md-5 d-flex">
             <div class="card-body">
-              <h5 class="card-title">About me</h5>
+              <h5 class="card-title"></h5>
               <p class="card-text">Hi!  I’m Chelsea, a life-long runner and fitness enthusiast!  I’m a middle of the pack runner who dabbles in triathlon, and loves to eat, travel, and race (or even better - to combine all three!).</p>
-              <p class="card-text">I started running when I joined my high school cross country team, and still vividly remember the first time I ran 3 miles without stopping.  From there I continued to grow my love of running by joining the track and field teams, and then went on to run track and field in college.  After my glory days I became a recreational runner, where I currently sit as a strong middle-of-the-pack athlete.  I’ve completed about a dozen half marathons, 5 full marathons, and 1 ultra-marathon, with countless 5ks, 10ks, and fun runs in between.  I love the rush that crossing the finish line gives - from the journey it took to get there, the anxiety of the starting line, to the exhilarating thrill of accomplishing your goals.  Running helps keep me sane, makes me feel good, and helps me be me - I would be lost without it!</p>
-              <p class="card-text">I am a Road Runners Club of America (RRCA) certified run coach, have a Bachelor of Science degree in Kinesiology, and have coached various youth track and field teams as well as individual recreational runners.  I am passionate about helping runners of all paces in all races find their love for running!</p>
+              <a class="btn btn-outline-info btn-lg" href="about.html" role="button">Learn more about me</a>
             </div>
           </div>
         </div>
@@ -72,10 +71,9 @@
         <div class="row no-gutters">
           <div class="col-md-5">
             <div class="card-body">
-              <h5 class="card-title">Why use a run coach?</h5>
+              <h5 class="card-title"></h5>
               <p class="card-text">Run coaches are for all runners - any pace, and for any race.  You don’t have to be an elite runner or a front of the pack runner in order to have a coach - all you need to do is be a runner!  From wanting to finish a 5k without walking to completing your very first marathon, a run coach can help you get there.</p>
-              <p class="card-text">Looking for someone to keep you accountable?  Frustrated that you can’t seem to make progress on your own?  Worried about injury?  Need someone to tell you to chill out and actually take that rest day?  Looking for that elusive PR or qualifying time?  Do you simply want to run stronger, better, and faster?  I’m here to be your run coach to help you on your running journey!  With custom training plans written specifically for you with your needs, goals, strengths and weaknesses addressed, you can take the stress out of training and simply focus on the fun part - actually running.  </p>
-              <p class="card-text">The heart of my coaching philosophy is to keep running fun while helping you reach your goals.  I am supportive and encouraging, though will also keep you disciplined and accountable.  I’m fun, flexible, and knowledgeable, and aim to inspire and encourage you to shoot for and reach goals you didn’t think were possible!</p>
+              <a class="btn btn-outline-primary btn-lg" href="why-coach.html" role="button">Why use a run coach?</a>
             </div>
           </div>
           <div class="col-md-7">
