Make jumbotron title bold

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <!--Jumbotron-->
       <div class="jumbotron">
-        <h1 class="display-3">Fast is Fun</h1>
+        <h1 class="display-3 fw-bold">Fast is Fun</h1>
         <p class="lead">Your personalized run coach passionate about helping your reach your full potential!</p>
         <hr class="my-4">
         <p class="lead">
