--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </nav>
 
       <!--Jumbotron-->
-      <div class="jumbotron">
+      <div class="jumbotron" style="border-radius: 0;">
         <h1 class="display-3 fw-bold">Fast is Fun</h1>
         <p class="lead">Your personalized run coach passionate about helping your reach your full potential!</p>
         <hr class="my-4">
