Add services page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="why-coach.html">Why a coach?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#pricing">Pricing</a>
+              <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
@@ -45,7 +45,7 @@
         <p class="lead">Your personalized run coach passionate about helping your reach your full potential!</p>
         <hr class="my-4">
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#pricing" role="button">Services</a>
+          <a class="btn btn-primary btn-lg" href="services.html" role="button">Services</a>
           <a class="btn btn-info btn-lg" href="#contact" role="button">Contact</a>
         </p>
       </div>
@@ -59,7 +59,7 @@
           <div class="col-md-5 d-flex">
             <div class="card-body">
               <h5 class="card-title"></h5>
-              <p class="card-text">Hi!  I’m Chelsea, a life-long runner and fitness enthusiast!  I’m a middle of the pack runner who dabbles in triathlon, and loves to eat, travel, and race (or even better - to combine all three!).</p>
+              <p class="card-text">Hi!  I’m Chelsea, a life-long runner and fitness enthusiast based in Philidelphia.  I’m a middle of the pack runner who dabbles in triathlon, and loves to eat, travel, and race (or even better - to combine all three!).</p>
               <a class="btn btn-outline-info btn-lg" href="about.html" role="button">Learn more about me</a>
             </div>
           </div>
@@ -82,50 +82,24 @@
         </div>
       </div>
 
-      <!--Pricing-->
-      <div id="pricing">
-      <div>
-        <img src="images/logo.png" alt="Fast is Fun logo" class="card img-fluid mx-auto d-block">
-      </div>
-      <div>
-        <h1 class="text-center text-info">Pricing</h1>
-      </div>
-      <div class="container text-info">
-        <div class="card-deck mb-3 text-center">
-          <div class="card mb-4 shadow-sm">
-            <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Consultation Call</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">Free!</h1>
-              <ul class="list-unstyled mt-3 mb-4">Not sure if coaching is right for you?
-                <li>15 minutes</li>
-                <li>Identify your goals</li>
-                <li>Discover what we can achieve together</li>
-              </ul>
-              <a type="button" class="btn btn-lg btn-block btn-primary" href="#contact">Learn More</a>
-            </div>
+      <!--Services-->
+      <div class="card mx-auto text-white bg-primary" style="max-width: 75rem">
+        <div class="row no-gutters">
+          <div class="col-md-7">
+            <img src="images/bridge.jpg" class="card-img" alt="Chelsea running over bridge">
           </div>
-          <div class="card mb-4 shadow-sm">
-            <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Fast is Fun Monthly Coaching</h4>
-            </div>
+          <div class="col-md-5 d-flex">
             <div class="card-body">
-              <h1 class="card-title pricing-card-title">$150/month</h1>
-              <ul class="list-unstyled mt-3 mb-4">Try coaching for a month, for a specific race training cycle, or for all your running needs.  Monthly contracts available with discounts on 3-month and 6-month packages.
-                <li>Initial consultation to assess your needs and identify you goals</li>
-                <li>Customized adjustable weekly training plans including workouts, target paces and distances, and cross training</li>
-                <li>Training plans sent online via Google Docs for flexibility and communication between athlete and coach</li>
-                <li>Weekly training log review via Google Docs commenting</li>
-                <li>Unlimited access to coach via text/email</li>
-                <li>Bi-monthly 30 minute coach/athlete check-ins via phone or Zoom</li>                  
-              </ul>
-              <a type="button" class="btn btn-lg btn-block btn-primary" href="#contact">Learn More</a>
+              <h5 class="card-title"></h5>
+              <p class="card-text">Ready to take your running to the next level? Fast is Fun provides the support, accountability, motivation and customized tools you need to identify and achieve your goals.</p>
+              <a class="btn btn-outline-info btn-lg" href="about.html" role="button">Services & rates</a>
             </div>
           </div>
         </div>
-    </div>
-</div>
+      </div>
+
+
+
 
 <!--Contact Form-->
 <div id="contact">
