--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
-    <title>Why a Run Coach?</title>
+    <title>Services & Pricing</title>
 </head>
 <body>
     <!--Navbar-->
@@ -24,13 +24,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About Me</a>
                 </li>
-                <li class="nav-item active">
-                <a class="nav-link" href="#">Why a coach?
+                <li class="nav-item">
+                    <a class="nav-link" href="why-coach.html">Why a coach?</a>
+                  </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Services
                   <span class="sr-only">(current)</span>
                 </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="services.html">Services</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#contact">Contact</a>
@@ -39,21 +39,48 @@
           </div>
       </nav>
 
-    <!--Why Use A Run Coach?-->
-    <div id="why-coach" class="card mx-auto text-white bg-info mt-5" style="max-width: 75rem;">
+    <!--Services-->
+    <div class="card mx-auto text-white bg-primary mt-5" style="max-width: 75rem;">
         <div class="row no-gutters">
-            <div class="card-header text-center fw-bold">Why use a run coach?</div>
-            <div class="col-md-7">
-                <img src="images/matthew.jpg" class="card-img" alt="Me and my husband holding our medals">
-              </div>
-          <div class="col-md-5">
-            <div class="card-body">
-              <p class="card-text">Run coaches are for all runners - any pace, and for any race.  You don’t have to be an elite runner or a front of the pack runner in order to have a coach - all you need to do is be a runner!  From wanting to finish a 5k without walking to completing your very first marathon, a run coach can help you get there.</p>
-              <p class="card-text">Looking for someone to keep you accountable?  Frustrated that you can’t seem to make progress on your own?  Worried about injury?  Need someone to tell you to chill out and actually take that rest day?  Looking for that elusive PR or qualifying time?  Do you simply want to run stronger, better, and faster?  I’m here to be your run coach to help you on your running journey!  With custom training plans written specifically for you with your needs, goals, strengths and weaknesses addressed, you can take the stress out of training and simply focus on the fun part - actually running.  </p>
-              <p class="card-text">The heart of my coaching philosophy is to keep running fun while helping you reach your goals.  I am supportive and encouraging, though will also keep you disciplined and accountable.  I’m fun, flexible, and knowledgeable, and aim to inspire and encourage you to shoot for and reach goals you didn’t think were possible!</p>
-            </div>
-          </div>
+        <div class="card-header text-center fw-bold">Services & Rates</div>
 
+
+        <div class="container text-info">
+            <div class="card-deck mb-3 text-center">
+              <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                  <h2 class="my-0 fw-bold">Consultation Call</h2>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title pricing-card-title">Not sure if coaching is right for you?</h5>
+                  <ul class="mt-3 mb-4 text-left"><span class="fw-bold">What's included:</span>
+                    <li class="ml-4">15 minutes</li>
+                    <li class="ml-4">Identify your goals</li>
+                    <li class="ml-4">Discover what we can achieve together</li>
+                  </ul>
+                  <button type="button" class="btn btn-info btn-lg">Free!</button>
+                </div>
+              </div>
+              <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                  <h2 class="my-0 fw-bold">Fast is Fun Monthly Coaching</h2>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title pricing-card-title">Try coaching for a month, for a specific race training cycle, or for all your running needs.  Monthly contracts available with discounts on 3-month and 6-month packages.</h5>
+                  <ul class="mt-3 mb-4 text-left"><span class="fw-bold">What's included:</span>
+                    <li class="ml-4">Initial consultation to assess your needs and identify you goals</li>
+                    <li class="ml-4">Customized adjustable weekly training plans including workouts, target paces and distances, and cross training</li>
+                    <li class="ml-4">Training plans sent online via Google Docs for flexibility and communication between athlete and coach</li>
+                    <li class="ml-4">Weekly training log review via Google Docs commenting</li>
+                    <li class="ml-4">Unlimited access to coach via text/email</li>
+                    <li class="ml-4">Bi-monthly 30 minute coach/athlete check-ins via phone or Zoom</li>                  
+                  </ul>
+                  <button type="button" class="btn btn-info btn-lg">$150/month</button>
+                </div>
+              </div>
+            </div>
+        </div>
+        
         </div>
       </div>
 
