--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <title>Fast is Fun</title>
 </head>
 <body>
@@ -42,11 +43,11 @@
       <!--Jumbotron-->
       <div class="jumbotron" style="border-radius: 0;">
         <h1 class="display-3 fw-bold">Fast is Fun</h1>
-        <p class="lead">Your personalized run coach passionate about helping your reach your full potential!</p>
+        <p class="lead">Your personalized run coach passionate about helping you reach your full potential!</p>
         <hr class="my-4">
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="services.html" role="button">Services</a>
-          <a class="btn btn-info btn-lg" href="#contact" role="button">Contact</a>
+          <a class="btn btn-primary btn-lg" href="services.html" role="button" style="width: 123px;">Services <i class="fas fa-arrow-right"></i></a>
+          <a class="btn btn-info btn-lg" href="#contact" role="button" style="width: 123px;">Contact <i class="fas fa-arrow-right"></i></a>
         </p>
       </div>
 
@@ -60,7 +61,7 @@
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text">Hi!  I’m Chelsea, a life-long runner and fitness enthusiast based in Philidelphia.  I’m a middle of the pack runner who dabbles in triathlon, and loves to eat, travel, and race (or even better - to combine all three!).</p>
-              <a class="btn btn-outline-info btn-lg" href="about.html" role="button">Learn more about me</a>
+              <a class="btn btn-info btn-lg" href="about.html" role="button">More about me <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -73,7 +74,7 @@
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text">Run coaches are for all runners - any pace, and for any race.  You don’t have to be an elite runner or a front of the pack runner in order to have a coach - all you need to do is be a runner!  From wanting to finish a 5k without walking to completing your very first marathon, a run coach can help you get there.</p>
-              <a class="btn btn-outline-primary btn-lg" href="why-coach.html" role="button">Why use a run coach?</a>
+              <a class="btn btn-primary btn-lg" href="why-coach.html" role="button">Why use a run coach? <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
           <div class="col-md-7">
@@ -92,7 +93,7 @@
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text">Ready to take your running to the next level? Fast is Fun provides the support, accountability, motivation and customized tools you need to identify and achieve your goals.</p>
-              <a class="btn btn-outline-info btn-lg" href="about.html" role="button">Services & rates</a>
+              <a class="btn btn-info btn-lg" href="about.html" role="button">Services & rates <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
