Add contact page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
         <hr class="my-4">
         <p class="lead">
           <a class="btn btn-primary btn-lg" href="services.html" role="button" style="width: 123px;">Services <i class="fas fa-arrow-right"></i></a>
-          <a class="btn btn-info btn-lg" href="#contact" role="button" style="width: 123px;">Contact <i class="fas fa-arrow-right"></i></a>
+          <a class="btn btn-info btn-lg" href="contact.html" role="button" style="width: 123px;">Contact <i class="fas fa-arrow-right"></i></a>
         </p>
       </div>
 
