--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
-    <title>Services & Pricing</title>
+    <title>Contact</title>
 </head>
 <body>
     <!--Navbar-->
@@ -21,68 +21,40 @@
             <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
                   </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About Me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="why-coach.html">Why a coach?</a>
-                  </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About Me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="why-coach.html">Why a coach?</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="services.html">Services</a>
+              </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Services
+                <a class="nav-link" href="#">Contact
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
             </ul>
           </div>
       </nav>
 
-    <!--Services-->
-    <div class="card mx-auto text-white bg-primary mt-5" style="max-width: 75rem;">
+      <!--Contact-->
+
+      <div class="card mx-auto text-white bg-primary mt-5" style="max-width: 75rem;">
         <div class="row no-gutters">
-        <div class="card-header text-center fw-bold">Services & Rates</div>
-
-
-        <div class="container text-info">
-            <div class="card-deck mb-3 text-center">
-              <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                  <h2 class="my-0 fw-bold">Consultation Call</h2>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title pricing-card-title">Not sure if coaching is right for you?</h5>
-                  <ul class="mt-3 mb-4 text-left"><span class="fw-bold">What's included:</span>
-                    <li class="ml-4">15 minutes</li>
-                    <li class="ml-4">Identify your goals</li>
-                    <li class="ml-4">Discover what we can achieve together</li>
-                  </ul>
-                  <button type="button" class="btn btn-info btn-lg">Free!</button>
-                </div>
-              </div>
-              <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                  <h2 class="my-0 fw-bold">Fast is Fun Monthly Coaching</h2>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title pricing-card-title">Try coaching for a month, for a specific race training cycle, or for all your running needs.  Monthly contracts available with discounts on 3-month and 6-month packages.</h5>
-                  <ul class="mt-3 mb-4 text-left"><span class="fw-bold">What's included:</span>
-                    <li class="ml-4">Initial consultation to assess your needs and identify you goals</li>
-                    <li class="ml-4">Customized adjustable weekly training plans including workouts, target paces and distances, and cross training</li>
-                    <li class="ml-4">Training plans sent online via Google Docs for flexibility and communication between athlete and coach</li>
-                    <li class="ml-4">Weekly training log review via Google Docs commenting</li>
-                    <li class="ml-4">Unlimited access to coach via text/email</li>
-                    <li class="ml-4">Bi-monthly 30 minute coach/athlete check-ins via phone or Zoom</li>                  
-                  </ul>
-                  <button type="button" class="btn btn-info btn-lg">$150/month</button>
-                </div>
-              </div>
+        <div class="card-header text-center fw-bold">Contact Me</div>
+        <div class="card text-white bg-primary mb-5 mx-auto d-block" style="max-width: 70rem;">
+            <div class="card-body">
+              <div class="typeform-widget" data-url="https://form.typeform.com/to/Iy2rr1SR?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 550px;"></div> 
             </div>
-        </div>
-        
+          </div>
         </div>
       </div>
+
+
+      
+      <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
 
  <!--Back to Top button-->
