--- a/about.html
+++ b/about.html
@@ -57,36 +57,16 @@
       </div>
 
 
- <!--Back to Top button-->
- <button type="button" class="btn btn-secondary" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
- <script>
-  //Get the button
-  var mybutton = document.getElementById("myBtn");
-  
-  // When the user scrolls down 20px from the top of the document, show the button
-  window.onscroll = function() {scrollFunction()};
-  
-  function scrollFunction() {
-    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-      mybutton.style.display = "block";
-    } else {
-      mybutton.style.display = "none";
-    }
-  }
-  
-  // When the user clicks on the button, scroll to the top of the document
-  function topFunction() {
-    document.body.scrollTop = 0;
-    document.documentElement.scrollTop = 0;
-  }
-  </script>
-
 <!-- Footer -->
-<footer class="page-footer bg-primary">
-    <div class="footer-copyright text-center text-info py-3">© 2020 Fast is Fun<br>Web design & development by <a class="text-info" href="https://github.com/jordanacaley" target="blank">jordanacaley</a>
-    </div>
-</footer>
+<div class="card text-white bg-primary text-center py-0 my-0">
+  <div class="card-body">
+    <a class="btn btn-info btn-lg" href="contact.html" role="button">Contact</a>
+    <p class="card-text mt-2 mb-1">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
+    <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">jordanacaley</a></u></p>
+  </div>
+</div>
+<!-- Copyright year script -->
+<script> document.querySelector("#copyright-year").innerText=new Date().getFullYear();</script>
 
       <!--Bootstrap 4.3 dependencies-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
