--- a/index.html
+++ b/index.html
@@ -99,26 +99,6 @@
         </div>
       </div>
 
-
-
-
-<!--Contact Form-->
-<div id="contact">
-  <h1 class="text-center text-info">Contact Me</h1>
-</div>
-<div class="card text-white bg-primary mb-5 mx-auto d-block" style="max-width: 70rem;">
-  <div class="card-body">
-    <div class="typeform-widget" data-url="https://form.typeform.com/to/Iy2rr1SR?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 500px;"></div> 
-  </div>
-</div>
-
-<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-
-<!--Extra photos-->
-<div>
-    <img src="images/bridge.jpg" alt="Chelsea running over bridge" class="card img-fluid mx-auto d-block" style="max-height: 450px;">
- </div>
-
  <!--Back to Top button-->
  <button type="button" class="btn btn-secondary" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
@@ -145,10 +125,15 @@
   </script>
 
 <!-- Footer -->
-<footer class="page-footer bg-primary">
-    <div class="footer-copyright text-center text-info py-3">© 2020 Fast is Fun<br>Web design & development by <a class="text-info" href="https://github.com/jordanacaley" target="blank">jordanacaley</a>
-    </div>
-</footer>
+<div class="card text-white bg-primary text-center py-0 my-0">
+  <div class="card-body">
+    <a class="btn btn-info btn-lg" href="contact.html" role="button">Contact</a>
+    <p class="card-text mt-2 mb-1">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
+    <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">jordanacaley</a></u></p>
+  </div>
+</div>
+<!-- Copyright year script -->
+<script> document.querySelector("#copyright-year").innerText=new Date().getFullYear();</script>
 
       <!--Bootstrap 4.3 dependencies-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
