--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,12 @@
 
       <!--Contact-->
 
-      <div class="card mx-auto text-white bg-primary mt-5" style="max-width: 75rem;">
+      <div class="card mx-auto text-white bg-info mt-5" style="max-width: 75rem;">
         <div class="row no-gutters">
-        <div class="card-header text-center fw-bold">Contact Me</div>
-        <div class="card text-white bg-primary mb-5 mx-auto d-block" style="max-width: 70rem;">
+        <div class="card-header text-center fw-bold">Contact</div>
+        <div class="card text-white bg-info mb-5 mx-auto d-block" style="max-width: 70rem;">
             <div class="card-body">
-              <div class="typeform-widget" data-url="https://form.typeform.com/to/Iy2rr1SR?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 550px;"></div> 
+              <div class="typeform-widget" data-url="https://form.typeform.com/to/Iy2rr1SR?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 600px;"></div> 
             </div>
           </div>
         </div>
