Add RRCA logo and link to About Me page

--- a/about.html
+++ b/about.html
@@ -44,13 +44,14 @@
         <div class="row no-gutters">
         <div class="card-header text-center fw-bold">About Me</div>
           <div class="col-md-7">
-            <img src="images/bib.jpg" class="card-img" alt="Me holding up a race bib">
+            <img src="images/bib.jpg" class="card-img" alt="Chelsea holding a race bib">
           </div>
           <div class="col-md-5">
             <div class="card-body">
-              <p class="card-text">Hi!  I’m Chelsea, a life-long runner and fitness enthusiast based in Philidelphia!  I’m a middle of the pack runner who dabbles in triathlon, and loves to eat, travel, and race (or even better - to combine all three!).</p>
+              <p class="card-text">Hi!  I’m Chelsea, a life-long runner and fitness enthusiast based in Philadelphia!  I’m a middle of the pack runner who dabbles in triathlon, and loves to eat, travel, and race (or even better - to combine all three!).</p>
               <p class="card-text">I started running when I joined my high school cross country team, and still vividly remember the first time I ran 3 miles without stopping.  From there I continued to grow my love of running by joining the track and field teams, and then went on to run track and field in college.  After my glory days I became a recreational runner, where I currently sit as a strong middle-of-the-pack athlete.  I’ve completed about a dozen half marathons, 5 full marathons, and 1 ultra-marathon, with countless 5ks, 10ks, and fun runs in between.  I love the rush that crossing the finish line gives - from the journey it took to get there, the anxiety of the starting line, to the exhilarating thrill of accomplishing your goals.  Running helps keep me sane, makes me feel good, and helps me be me - I would be lost without it!</p>
-              <p class="card-text">I am a Road Runners Club of America (RRCA) certified run coach, have a Bachelor of Science degree in Kinesiology, and have coached various youth track and field teams as well as individual recreational runners.  I am passionate about helping runners of all paces in all races find their love for running!</p>
+              <p class="card-text">I am a <a href="https://www.rrca.org/home" target="_blank" class="text-info">Road Runners Club of America (RRCA)</a> certified run coach, have a Bachelor of Science degree in Kinesiology, and have coached various youth track and field teams as well as individual recreational runners.  I am passionate about helping runners of all paces in all races find their love for running!</p>
+              <img src="images/rrca_logo.jpg" class="rounded mx-auto d-block" alt="RRCA logo" style="height: 75px;">
             </div>
           </div>
         </div>
