--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
       <div id="about-me" class="card mx-auto text-white bg-primary" style="max-width: 75rem">
         <div class="row no-gutters">
           <div class="col-md-7">
-            <img src="images/bib.jpg" class="card-img" alt="Me holding up a race bib">
+            <img src="images/japan.JPG" class="card-img" alt="Chelsea at a race in Japan">
           </div>
           <div class="col-md-5 d-flex">
             <div class="card-body">
               <h5 class="card-title"></h5>
-              <p class="card-text">Hi!  I’m Chelsea, a life-long runner and fitness enthusiast based in Philidelphia.  I’m a middle of the pack runner who dabbles in triathlon, and loves to eat, travel, and race (or even better - to combine all three!).</p>
+              <p class="card-text">Hi!  I’m Chelsea, a life-long runner and fitness enthusiast based in Philadelphia.  I’m a middle of the pack runner who dabbles in triathlon, and loves to eat, travel, and race (or even better - to combine all three!).</p>
               <a class="btn btn-info btn-lg" href="about.html" role="button">More about me <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
@@ -73,12 +73,12 @@
           <div class="col-md-5">
             <div class="card-body">
               <h5 class="card-title"></h5>
-              <p class="card-text">Run coaches are for all runners - any pace, and for any race.  You don’t have to be an elite runner or a front of the pack runner in order to have a coach - all you need to do is be a runner!  From wanting to finish a 5k without walking to completing your very first marathon, a run coach can help you get there.</p>
+              <p class="card-text">Run coaches are for all runners - any pace, and for any race.  From wanting to finish a 5k without walking to completing your very first marathon, a run coach can help you get there.</p>
               <a class="btn btn-primary btn-lg" href="why-coach.html" role="button">Why use a run coach? <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
           <div class="col-md-7">
-            <img src="images/matthew.jpg" class="card-img" alt="Me and my husband holding our medals">
+            <img src="images/matthew.jpg" class="card-img" alt="Chelsea and her husband holding their medals">
           </div>
         </div>
       </div>
@@ -92,7 +92,7 @@
           <div class="col-md-5 d-flex">
             <div class="card-body">
               <h5 class="card-title"></h5>
-              <p class="card-text">Ready to take your running to the next level? Fast is Fun provides the support, accountability, motivation and customized tools you need to identify and achieve your goals.</p>
+              <p class="card-text">Ready to take your running to the next level? Fast is Fun provides the support, accountability, motivation and customized plan you need!</p>
               <a class="btn btn-info btn-lg" href="about.html" role="button">Services & rates <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
