--- a/why-coach.html
+++ b/why-coach.html
@@ -44,7 +44,7 @@
         <div class="row no-gutters">
             <div class="card-header text-center fw-bold">Why use a run coach?</div>
             <div class="col-md-7">
-                <img src="images/matthew.jpg" class="card-img" alt="Me and my husband holding our medals">
+                <img src="images/forest.jpg" class="card-img" alt="Chelsea running in the forest">
               </div>
           <div class="col-md-5">
             <div class="card-body">
